--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.17.4",
     "classnames": "^2.3.1",
     "nanoid": "^3.1.30",
     "node-sass": "^6.0.1",
