--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -11,6 +11,7 @@
 	  "jest": true
 	},
 	"rules": {
+		"no-param-reassign": 0,
 	"default-param-last": "off",
 	  "curly": ["error"],
 	  "max-depth": ["warn", 4],
