--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "react-top-loading-bar": "^2.1.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^1.1.2"
